--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^4.0.0",
     "sugarss": "^2.0.0",
     "svg-inline-loader": "^0.8.0",
