--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "webpack-start",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=development"
+    "prod": "cross-env NODE_ENV=production webpack",
+    "dev": "cross-env NODE_ENV=development webpack",
+    "dev:w": "cross-env NODE_ENV=development webpack-dev-server",
+    "build": "npm run prod",
+    "start": "npm run dev:w"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +30,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
