--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "stats": "webpack --profile --json > stats.json",
+    "analyze": "npm run stats && webpack-bundle-analyzer stats.json",
     "prod": "cross-env NODE_ENV=production webpack",
     "dev": "cross-env NODE_ENV=development webpack",
     "dev:w": "cross-env NODE_ENV=development webpack-dev-server",
@@ -56,6 +58,7 @@
     "svg-inline-loader": "^0.8.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
