--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "webpack-start",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "env:prod": "cross-env NODE_ENV=production",
+    "env:dev": "cross-env NODE_ENV=development",
     "stats": "webpack --profile --json > stats.json",
-    "analyze": "npm run stats && webpack-bundle-analyzer stats.json",
-    "prod": "cross-env NODE_ENV=production webpack",
-    "dev": "cross-env NODE_ENV=development webpack",
-    "dev:w": "cross-env NODE_ENV=development webpack-dev-server",
+    "analyze": "npm run env:prod && npm run stats && webpack-bundle-analyzer stats.json",
+    "prod": "npm run env:prod webpack",
+    "dev": "npm run env:prod webpack",
+    "dev:w": "npm run env:dev webpack-dev-server",
     "build": "npm run prod",
     "start": "npm run dev:w"
   },
