--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "eslint-loader": "^3.0.3",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-pug-plugin": "^2.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -56,7 +55,7 @@
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^4.0.0",
-    "sugarss": "^2.0.0",
+    "stylelint-webpack-plugin": "^1.2.1",
     "svg-inline-loader": "^0.8.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
@@ -74,6 +73,7 @@
   "dependencies": {
     "@babel/runtime": "^7.8.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "stylelint-config-prettier": "^8.0.1"
   }
 }
