--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -72,6 +72,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.8.3",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "stylelint-config-prettier": "^8.0.1"
