--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-export-default-from": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
@@ -62,7 +64,8 @@
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "stylelint-config-prettier": "^8.0.1"
   },
   "browserslist": [
     "> .5% and last 2 versions",
@@ -75,7 +78,7 @@
     "@babel/runtime": "^7.8.3",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "stylelint-config-prettier": "^8.0.1"
+    "react-dom": "^16.12.0"
+
   }
 }
