--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "stylelint": "^13.0.0",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^4.0.0",
     "stylelint-webpack-plugin": "^1.2.1",
@@ -65,8 +66,7 @@
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "stylelint-config-prettier": "^8.0.1"
+    "webpack-dev-server": "^3.10.1"
   },
   "browserslist": [
     "> .5% and last 2 versions",
@@ -80,6 +80,5 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
-
   }
 }
