--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.1.0",
   "description": "",
   "main": "src/index.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint src/js/**",
+    "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --fix --syntax scss",
+    "lint": "npm run eslint && npm run stylelint",
     "env:prod": "cross-env NODE_ENV=production",
     "env:dev": "cross-env NODE_ENV=development",
     "stats": "webpack --profile --json > stats.json",
