--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "src/index.js",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.(js|jsx)": ["npm run lint:fix", "git add"]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src/js/** --fix",
-    "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --fix --syntax scss",
+    "eslint": "eslint src/js/**",
+    "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss",
+    "eslint:fix": "npm run eslint --fix",
+    "stylelint:fix": "npm run stylelint --fix",
     "lint": "npm run eslint && npm run stylelint",
+    "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
     "env:prod": "cross-env NODE_ENV=production",
     "env:dev": "cross-env NODE_ENV=development",
     "stats": "webpack --profile --json > stats.json",
@@ -56,6 +62,7 @@
     "html-webpack-plugin": "^4.0.0-beta.11",
     "husky": "^4.2.1",
     "imagemin-webpack-plugin": "^2.4.2",
+    "lint-staged": "^10.0.7",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
