--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src/js/**",
-    "eslint:fix": "eslint src/js/** --fix",
+    "eslint": "eslint src/js/** --ext .js,.jsx",
+    "eslint:fix": "eslint src/js/** --fix --ext .js,.jsx",
     "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss",
     "stylelint:fix": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss --fix",
     "lint": "npm run eslint && npm run stylelint",
-    "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
+    "lint:fix": "npm run eslint:fix",
     "env:prod": "cross-env NODE_ENV=production",
     "env:dev": "cross-env NODE_ENV=development",
     "stats": "webpack --profile --json > stats.json",
