--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     }
   },
   "lint-staged": {
-    "*.(js|jsx)": ["npm run lint:fix", "git add"]
+    "*.(js|jsx)": [
+      "npm run eslint:fix",
+      "git add"
+    ],
+    "*.scss": [
+      "npm run stylelint:fix",
+      "git add"
+    ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src/js/** --ext .js,.jsx",
-    "eslint:fix": "eslint src/js/** --fix --ext .js,.jsx",
+    "eslint": "eslint --ext .js,.jsx",
+    "eslint:fix": "eslint --fix --ext .js,.jsx",
     "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss",
     "stylelint:fix": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss --fix",
     "lint": "npm run eslint && npm run stylelint",
@@ -58,6 +65,7 @@
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-babel": "^5.3.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^4.0.0-beta.11",
     "husky": "^4.2.1",
