--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint --ext .js,.jsx",
-    "eslint:fix": "eslint --fix --ext .js,.jsx",
+    "eslint": "eslint src --ext .js,.jsx",
+    "eslint:fix": "eslint src --fix --ext .js,.jsx",
     "stylelint": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss",
     "stylelint:fix": "stylelint src/**/*.scss --output-file stylelint.log --syntax scss --fix",
     "lint": "npm run eslint && npm run stylelint",
